# jacktrip

./: .clang-format  .clang-format-ignore  .clang-tidy  .clang-tidy-ignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  404.html  AudioInterface.h  CHANGESLOG.txt  CMakeLists.txt  Dockerfile  Doxyfile  INSTALL.md  INSTALL.txt  INSTALL_mac.md  INSTALL_meson.md  JMess.cpp  JackAudioInterface.h  JackTrip.cpp  JackTripWorker.cpp  LICENSE  LICENSE.md  QJackTrip.kdev4  README.md  Settings.cpp  Settings.h  TODO.txt  UdpDataProtocol.cpp  UdpDataProtocol.h  UdpHubListener.cpp  UdpHubListener.h  build  build-script  changelog.yml  generate_api_doc.sh  (+19 more)
linux/: Dockerfile.build  README.md  add_changelog_to_metainfo.py  jacktrip.desktop  meson.build  org.jacktrip.JackTrip.desktop  org.jacktrip.JackTrip.desktop.in  org.jacktrip.JackTrip.metainfo.xml  org.jacktrip.JackTrip.metainfo.xml.in  org.jacktrip.JackTrip.metainfo.xml.in.in
linux/container/: README.md  jacktrip.service
linux/flatpak/: org.jacktrip.JackTrip.Devel.yml  org.jacktrip.JackTrip.Devel.yml.j2  org.jacktrip.JackTrip.yml
src/: .qmake.stash  Analyzer.cpp  Analyzer.h  AudioBridgeProcessor.cpp  AudioBridgeProcessor.h  AudioInterface.cpp  AudioInterface.h  AudioSocket.cpp  AudioSocket.h  AudioTester.cpp  AudioTester.h  Auth.cpp  Auth.h  Browse.qml  Compressor.cpp  Compressor.h  CompressorPresets.h  DataProtocol.cpp  DataProtocol.h  DataProtocolPOSIX.cpp.tmp  DataProtocolPOSIX.h.tmp  Effects.h  IcmpDataProtocol.cpp  IcmpDataProtocol.h  InputMixMode.h  JMess.cpp  JMess.h  JTApplication.h  JackAudioInterface.cpp  JackAudioInterface.h  JackClient.cpp  JackTrip.cpp  JackTrip.h  JackTripThread.cpp  JackTripThread.h  JackTripWorker.cpp  JackTripWorker.h  JackTripWorkerMessages.h  JitterBuffer.cpp  JitterBuffer.h  (+149 more)
src/.deps/: moc_shape2d.P
src/audio/: AudioInterface.cpp  AudioInterface.h  AudioInterfaceMode.h  JackAudioInterface.cpp  JackAudioInterface.h  RtAudioInterface.cpp  RtAudioInterface.h
src/auv2/: Info.plist  JackTripAU.cpp  JackTripAU.h  JackTripAUCocoaUI.mm  JackTripAUView.h  JackTripAUView.mm  JackTripAUViewFactory.mm  README.md  meson.build
src/auv3/: Info.plist  JackTripAU.h  JackTripAU.mm  JackTripAUFactory.mm  JackTripAUViewController.h  JackTripAUViewController.mm  README.md  meson.build
src/dblsqd/: feed.cpp  feed.h  release.cpp  release.h  semver.cpp  semver.h  update_dialog.cpp  update_dialog.h  update_dialog.ui
src/dblsqd-sdk-qt/: CMakeLists.txt  dblsqd-sdk-qt.pri
src/dblsqd-sdk-qt/dblsqd/: feed.cpp  feed.h  release.cpp  release.h  semver.cpp  semver.h  update_dialog.cpp  update_dialog.h
src/gui/: AppIcon.qml  AudioInterfaceMode.h  AudioSettings.qml  AutoUpdater.cpp  AutoUpdater.h  Browse.qml  ChangeDevices.qml  CocoaInitializer.h  CocoaInitializer.mm  Connected.qml  CreateStudio.qml  DeviceControls.qml  DeviceControlsGroup.qml  DeviceRefreshButton.qml  DeviceWarning.qml  Failed.qml  FeedbackSurvey.qml  FirstLaunch.qml  Footer.qml  InfoTooltip.qml  LearnMoreButton.qml  Login.qml  Meter.qml  MeterBars.qml  NetworkStats.qml  NoNap.h  NoNap.mm  Permissions.qml  Recommendations.qml  SectionHeading.qml  Settings.qml  Setup.qml  SparkleAutoUpdater.h  SparkleAutoUpdater.mm  Studio.qml  Styles.qml  VolumeSlider.qml  Web.qml  WebEngine.qml  WebNull.qml  (+70 more)
src/gui/alt/: Jacktrip.ai
src/images/: images.qrc  jacktrip.icns
src/jacktrip.xcodeproj/: project.pbxproj
src/oscpp/: client.hpp  print.hpp  server.hpp
src/oscpp/detail/: host.hpp  stream.hpp
src/release/: moc_DataProtocol.cpp  moc_JackTrip.cpp  moc_JackTripWorker.cpp  moc_JackTripWorkerMessages.cpp  moc_NetKS.cpp  moc_PacketHeader.cpp  moc_Settings.cpp  moc_ThreadPoolTest.cpp  moc_UdpDataProtocol.cpp  moc_UdpMasterListener.cpp  moc_predefs.h
src/scripts/: ijtj
src/scripts0/: ijtc  ijtd  ijtjx
src/ui/: MainWindow.h
src/vs/: AboutWindow.qml  AudioInterfaceMode.h  AudioSettings.qml  Browse.qml  ChangeDevices.qml  Connected.qml  CreateStudio.qml  DeviceControls.qml  DeviceControlsGroup.qml  DeviceWarning.qml  DeviceWarningModal.qml  FeedbackSurvey.qml  FirstLaunch.qml  Footer.qml  JTApplication.h  LearnMoreButton.qml  Login.qml  MeterBars.qml  OldWebEngine.qml  Permissions.qml  Recommendations.qml  ScreenShareModal.qml  SectionHeading.qml  Settings.qml  Setup.qml  Studio.qml  Web.qml  WebEngine.qml  WebView.qml  virtualstudio.cpp  virtualstudio.h  vs.qml  vs.qrc  vsApi.cpp  vsApi.h  vsAudio.cpp  vsAudio.h  vsAuth.cpp  vsAuth.h  vsConstants.h  (+21 more)
src/vst3/: Info.plist  JackTripVST.h  JackTripVSTCids.h  JackTripVSTController.cpp  JackTripVSTController.h  JackTripVSTDataBlock.h  JackTripVSTEntry.cpp  JackTripVSTProcessor.cpp  JackTripVSTProcessor.h  README.md  meson.build  version.h
src/vst3/resources/: JackTripEditor.uidesc  moduleinfo.json  win32resource.rc
src/webrtc/: WebRtcDataProtocol.cpp  WebRtcDataProtocol.h  WebRtcPeerConnection.cpp  WebRtcPeerConnection.h  WebRtcSignalingProtocol.cpp  WebRtcSignalingProtocol.h  WebSocketSignalingConnection.cpp  WebSocketSignalingConnection.h
src/webtransport/: WebTransportDataProtocol.cpp  WebTransportDataProtocol.h  WebTransportSession.cpp  WebTransportSession.h
src/webview/: WebViewWorker.cpp  WebViewWorker.h
subprojects/libjacktrip/: meson.build
subprojects/libjacktrip/include/: AudioInterface.h  DataProtocol.h  JMess.h  JackAudioInterface.h  JackTrip.h  JackTripWorker.h  PacketHeader.h  UdpDataProtocol.h  meson.build
subprojects/libjacktrip/src/: AudioInterface.cpp  DataProtocol.cpp  JMess.cpp  JackAudioInterface.cpp  JackAudioInterface.h  JackTrip.cpp  JackTripWorker.cpp  LoopBack.cpp  PacketHeader.cpp  RingBuffer.cpp  UdpDataProtocol.cpp  UdpDataProtocolPOSIX.cpp.tmp  UdpHubListener.cpp  (+3 more)
win/: build_installer.bat  cross_file.txt  files.wxs  files_static.wxs  getCsv.sh  jack.pc  jacktrip-bundle.wxs  jacktrip-vst3.wxs  jacktrip.exe.manifest  jacktrip.wxs  jacktrip.wxs.template  license.rtf  meson.build  qjacktrip.rc  qjacktrip.wxs  qt5.wxs  qt6-noguids.wxs  qt6.wxs  uninstall_old_jacktrip.cpp
win/CodeSignTool/: CodeSignTool.sh
(+780 files in other folders)
